src/global-styles/_shared.scss
@import './media-query-mixin';
@import './colors';

@mixin shared-button {
  border-radius: 35px;
  background: $primary-black-button-bgColor;
  min-width: 220px;
  padding: 0.4rem 0;
  gap: 10px;
  font-size: 1rem;
  transition: background 0.5s ease;

  &:disabled {
    opacity: 0.2;
  }

  @media (hover: hover) {
    &:hover {
      background: rgba(179, 179, 179, 0.768);
      color: black;
    }
  }
  @include media('<desktop') {
    min-width: 170px;
    font-size: 0.7rem;
  }

  @include media('<=560px') {
    min-width: 100px;
  }
}

